--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
     const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
     const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
     const BOT_NAME = "MiauoAI";
-    const PERSON_NAME = "Ty";
+    const PERSON_NAME = "Ja";
     msgerForm.addEventListener("submit", event => {
       event.preventDefault();
       const msgText = msgerInput.value;
